--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="ivanmuhsiegfried@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com.com/ivanmsiegfried"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/ivanmsiegfried"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My Twitter" target="https://twitter.com.com/ivanmsiegfried" href="https://twitter.com.com/ivanmsiegfried"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="https://github.com/ivanmsiegfried" href="https://github.com/ivanmsiegfried"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
