--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <a aria-label="Send Email" href="https://www.linkedin.com/in/ivanmsiegfried/"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="https://twitter.com.com/ivanmsiegfried" href="https://twitter.com.com/ivanmsiegfried"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="https://github.com/ivanmsiegfried" href="https://github.com/ivanmsiegfried"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-		<a aria-label="My Kaggle" target="https://www.kaggle.com/ivanmsiegfried" href="https://www.kaggle.com/ivanmsiegfried"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+		<a aria-label="My Github" target="https://www.kaggle.com/ivanmsiegfried" href="https://www.kaggle.com/ivanmsiegfried"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
