--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         Vinyl XOXO lumbersexual</p>
     </div>
     <div class="tech">
-      <h2>Codes</h2>
+      <h2>Code</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
