--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Girl in a jacket" style="width:500px;height:600px;">
+	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:50px;height:60px;">
 	  
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
