--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
       <i class="devicon-c-line colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
-	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:50px;height:60px;">
+	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:60px;">
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
