--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,8 +12,7 @@
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;">
       
 	  
-	  <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+	  <p>Beberapa bahasa pemrograman yang dikuasai. Bahasa pemrograman yang sering digunakan untuk Data Science adalah Python. Sementara bahasa pemrograman yang lain sering saya gunakan untuk menyelesaikan masalah Fisika Komputasi. </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
