--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,17 +9,18 @@
       <i class="devicon-c-line colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
 	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">
-	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;">
+	  <i class="devicon-visualstudio-plain-wordmark colored"></i>
       
 	  
-	  <p>Beberapa bahasa pemrograman yang dikuasai. Bahasa pemrograman yang sering digunakan untuk Data Science adalah Python. Sementara bahasa pemrograman yang lain sering saya gunakan untuk menyelesaikan masalah Fisika Komputasi. </p>
+	  <p>These are programming languages that I mastered. I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.  </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
+	  <i class="devicon-ubuntu-plain-wordmark colored"></i>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/320px-Arduino_Logo.svg.png" alt="Julia" style="width:150px;height:90px;">
+	  <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
 </div>
