--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,6 @@
       <i class="devicon-atom-original-wordmark"></i>
 	  <i class="devicon-ubuntu-plain-wordmark colored"></i>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/320px-Arduino_Logo.svg.png" alt="Julia" style="width:150px;height:90px;">
-	  <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+	  <p>These are tools and operating system that I often use for.</p>
     </div>
 </div>
