--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
 	  <i class="devicon-visualstudio-plain-wordmark colored"></i>
       
 	  
-	  <p>These are programming languages that I mastered. I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.  </p>
+	  <p>These are programming languages that I mastered. <br>I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.  </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
