--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Codes</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
