--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Codes</h2>
+      <h2>Code</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
 	  <i class="devicon-visualstudio-plain-wordmark colored"></i>
