--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,17 +7,17 @@
       <h2>Code</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
-	  <i class="devicon-visualstudio-plain-wordmark colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
 	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">
-	  <p>These are programming languages that I mastered. <br>I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.  </p>
+	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;">
+	  <p>These are programming languages that I mastered.I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.  </p>
     </div>
     <div class="tech">
       <br>
 	  <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-atom-original-wordmark"></i>
-	  <i class="devicon-ubuntu-plain-wordmark colored"></i>
+	  
 	  <p>These are tools and operating system that I often use for. </p>
     </div>
 </div>
