--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,6 +16,8 @@
 	  <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-atom-original-wordmark"></i>
-	  <p>These are tools and operating system that I often use for.</p>
+	  <i class="devicon-git-plain"></i>
+      <i class="devicon-atom-original-wordmark"></i>
+	  <p>These are programming languages that I mastered.I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.</p>
     </div>
 </div>
