--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
 	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;">
 	  <i class="devicon-git-plain"></i>
-      <i class="devicon-atom-original-wordmark"></i>
+      <i class="devicon-atom-original colored"></i>
 	  <p>These are programming languages and tools hat I mastered.I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.</p>
     </div>
 </div>
