--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
 	
   <div class="user">
     <div class="tech">
-      <h2>Codes and Tools Coba</h2>
+      <h2>Codes and Tools Coba2</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
