--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,8 +16,8 @@
     </div>
 	</div>
 	
-  <div class="user">
-    <div class="tech">
+  <div class="user2">
+    <div class="tech2">
       <h2>Codes and Tools Coba2</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
