--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
 	</div>
 	
   <div class="user2">
-    <div class="tech2">
+    <div class="tech">
       <h2>Codes and Tools Coba22</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-c-line colored"></i>
