--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,14 +16,16 @@
     </div>
 	</div>
 	
+	
+	
   <div class="user2">
     <div class="tech">
-	<center>
-      <h2>Codes and Tools CobaMantap</h2>
+
+      <h2><center>Codes and Tools CobaMantap</center></h2>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
 	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;">
 	  <p>These are programming languages and tools hat I mastered.I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.</p>
-    </center>
+
 	</div>
 	</div>
