--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,7 +21,7 @@
   <div class="user2">
     <div class="tech">
 
-      <h2><center>Codes and Tools CobaMantap</center></h2>
+      <h2><center>Codes and Tools Cob</center></h2>
 	  <center><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/VB.NET_Logo.svg/240px-VB.NET_Logo.svg.png" alt="VB.NET" style="width:70px;height:70px;"></center>
 	  <p><center>These are programming languages and tools hat I mastered.I often use Python as main programming language for Data Science, Machine Learning, Computer Vision etc. The other languages are used for me to solving Computational Physics problem.</center></p>
 
