--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
   <div class="user">
     <div class="tech">
       <h2>Codes and Tools</h2>
-      <i class="devicon-python-plain-wordmark colored"></i>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/240px-Python-logo-notext.svg.png" alt="Python" style="width:70px;height:70px;">
       <i class="devicon-c-line colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
 	  <img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">
@@ -27,3 +27,4 @@
 
 	</div>
 	</div>
+
