--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,11 +6,11 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Loan Prediction </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Proyek ini merupakan proyek yang bertujuan untuk menentukan apakah seseorang dapat diberikan suatu pinjaman atau tidak. Program tersebut diawali dengan proses pengecekan data null dalam dataset, proses mengganti nilai null tersebut dengan nilai baru, pengecekan data duplikat. Lalu, untuk meningkatkan performansi prediksi tersebut, penggunaan teknik label encoding digunakan. Lalu dengan menggunakan berbagai macam model (Logistic Regression, Random Forest Classification, XGBoost), didapatkan XGBoost merupakan model yang paling baik dengan tingkat akurasi hingga 80%.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
