--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,7 +27,7 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
   
-    <h1> Featured Projects </h1>
+    <h1> Computational Physics Portfolio </h1>
 </div>
 <div class="user-projects">
   <div class="images-right">
