--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,8 +26,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
-  
-    <h1> Computational Physics Portfolio </h1>
+</div>
+
+<div class="user-details">
+  <h1> Computational Physics Portfolio </h1>
 </div>
 <div class="user-projects">
   <div class="images-right">
