--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,7 +20,7 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Project Title2 </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
