--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
     </ul>
     <p>Proyek ini merupakan proyek yang bertujuan untuk menentukan apakah seseorang dapat diberikan suatu pinjaman atau tidak. Program tersebut diawali dengan proses pengecekan data null dalam dataset, proses mengganti nilai null tersebut dengan nilai baru, pengecekan data duplikat. Lalu, untuk meningkatkan performansi prediksi tersebut, penggunaan teknik label encoding digunakan. Lalu dengan menggunakan berbagai macam model (Logistic Regression, Random Forest Classification, XGBoost), didapatkan XGBoost merupakan model yang paling baik dengan tingkat akurasi hingga 80%.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Kaggle Link</a>
-	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" >Medium</a>
+	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
   </div>
 </div>
 <div class="user-projects">
