--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,17 +15,46 @@
 	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title23 </h3>
+    <h3> Boston House Price </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Regression Methods</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>Program ini merupakan program yang bertujuan untuk menentukan harga rumah dengan beberapa parameter menggunakan regresi linear. Program ini didahului dengan data cleansing. Setelah dibersihkan, data tersebut kemudian dilihat korelasi antara satu parameter dengan parameter lain menggunakan metoda pearson. Setelah ditentukan parameter mana yang akan diramalkan, data tersebut kemudian dilatih menggunakan regresi linear, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. Model-model tersebut kemudian divalidasi untuk melihat keakuratan model dan prediksi yang dihasilkan.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/boston-house-price-using-linear-regression" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Digit Image Recognition </h3>
+    <ul>
+      <li> Convolutional Neural Network</li>
+    </ul>
+    <p>Program ini merupakan program pengenalan citra menggunakan convolutional neural network. Citra mendeteksi suatu tepi dengan menggunakan kumpulan-kumpulan metoda matematis semisal konvolusi 2D, Max Pooling yang dikumpulkan dalam suatu sekuensial. Kemudian, bentuk data latih ini dioptimasi menggunakan fungsi Poisson sebagai loss function. Kemudian, sekuensial dan loss function tersebut dikompilasi dan diimplemetasikan kedalam set data yang kita punya. Model tersebut kemudian dievaluasi dengan menghitung tingkat akurasi.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/digit-recognizer-using-mnist-dataset" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Boston House Price </h3>
+    <ul>
+      <li> Regression Methods</li>
+    </ul>
+    <p>Program ini merupakan program yang bertujuan untuk menentukan harga rumah dengan beberapa parameter menggunakan regresi linear. Program ini didahului dengan data cleansing. Setelah dibersihkan, data tersebut kemudian dilihat korelasi antara satu parameter dengan parameter lain menggunakan metoda pearson. Setelah ditentukan parameter mana yang akan diramalkan, data tersebut kemudian dilatih menggunakan regresi linear, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. Model-model tersebut kemudian divalidasi untuk melihat keakuratan model dan prediksi yang dihasilkan.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/boston-house-price-using-linear-regression" target="_blank">Kaggle Link</a>
   </div>
 </div>
 
