--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -66,7 +66,7 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Loan Prediction1 </h3>
+    <h3> Loan Prediction </h3>
     <ul>
       <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
     </ul>
