--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-left">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
