--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,7 +49,7 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Boston House Price </h3>
+    <h3> Boston House Price2 </h3>
     <ul>
       <li> Regression Methods</li>
     </ul>
