--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,10 +2,10 @@
   <h1> Data Science and AI Portfolio </h1>
 </div>
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> Loan Prediction </h3>
     <ul>
       <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
@@ -31,7 +31,7 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
@@ -58,6 +58,7 @@
   </div>
 </div>
 
+<!--
 <div class="user-details">
   <h1> Computational Physics Portfolio </h1>
 </div>
@@ -87,3 +88,4 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+ --> 
