--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,15 +49,57 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Boston House Price2 </h3>
+    <h3> Comparative Study of Deep Learning Methods in Detection Face Mask Utilization </h3>
     <ul>
-      <li> Regression Methods</li>
+      <li> ResNet50, MobileNetV2, and Xception Model</li>
     </ul>
-    <p>Program ini merupakan program yang bertujuan untuk menentukan harga rumah dengan beberapa parameter menggunakan regresi linear. Program ini didahului dengan data cleansing. Setelah dibersihkan, data tersebut kemudian dilihat korelasi antara satu parameter dengan parameter lain menggunakan metoda pearson. Setelah ditentukan parameter mana yang akan diramalkan, data tersebut kemudian dilatih menggunakan regresi linear, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. Model-model tersebut kemudian divalidasi untuk melihat keakuratan model dan prediksi yang dihasilkan.</p>
-    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/boston-house-price-using-linear-regression" target="_blank">Kaggle Link</a>
+    <p>Model ini mendeteksi penggunaan citra wajah yang memakai masker menggunakan arsitektur jaringan syaraf tiruan menggunakan ResNet50V2, MobileNetV2, dan Xception yang merupakan model yang sudah dilatih dalam tahap awal. Untuk menspesifikasikan model dalam suatu tujuan yang khusus, perlu dilakukan proses yang dinamakan hyper-tuning yang dalam kasus ini model dilatih untuk mengenal citra wajah menggunakan masker maupun tidak. Hasil yang didapatkan adalah nilai validasi untuk metoda ResNet50V2 dan Xception memiliki nilai akurasi yang lebih baik dibandingkan dengan MobileNetV2. Meski begitu, terdapat trade-off dimana MobileNetV2 memiliki kecepatan latih yang lebih cepat dibandingkan dua metoda yang lain.</p>
+    <a class="project-link" href="https://doi.org/10.31219/osf.io/3gph4" target="_blank">Preprint Link</a>
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Sentiment Tweet Analysis of Jouska </h3>
+    <ul>
+      <li> Natural Language Processing</li>
+    </ul>
+    <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter saat sedang ramai skandal kasus investasi yang dilakukan dan didalangi oleh Jouska. Dari hasil tersebut, dapat dilihat bahwa lini masa menganggap masalah ini sebagai isu negatif.</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">Preprint Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Sentiment Tweet Analysis of Health Minister of Indonesia in July 2020 </h3>
+    <ul>
+      <li> Natural Language Processing</li>
+    </ul>
+    <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter tentang kinerja mengenai Menteri Kesehatan pada Juli 2020. Dari table diatas, dapat dilihat bahwa sentiment mengenai Menteri Terawan berada pada posisi yang positif. </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">Preprint Link</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Sanbercode Final Project: Wage Prediction </h3>
+    <ul>
+      <li> XGBoost </li>
+    </ul>
+    <p>Program ini memprediksi gaji seseorang bedasarkan parameter-parameter seperti kelas pekerja, umur, pendidikan, pekerjaan, dll.  Program ini meliputi proses data wrangling, modelling, dan validasi. Model tersebut berhasil menempati posisi 15 dari total 420 orang yang mengikuti kompetisi ini.  </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Final%20Project.ipynb" target="_blank">Preprint Link</a>
+  </div>
+</div>
 
 <!--
 <div class="user-details">
