--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -18,7 +18,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/2-ai-houseprice.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Boston House Price </h3>
@@ -32,7 +32,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/3-ai-mnist.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Digit Image Recognition </h3>
@@ -46,7 +46,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/4-ai-facemask.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Comparative Study of Deep Learning Methods in Detection Face Mask Utilization </h3>
@@ -60,7 +60,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/5-ai-jouska.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Sentiment Tweet Analysis of Jouska </h3>
@@ -74,7 +74,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/6-ai-healthminister.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Sentiment Tweet Analysis of Health Minister of Indonesia in July 2020 </h3>
@@ -89,7 +89,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/7-ai-wage.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Sanbercode Final Project: Wage Prediction </h3>
