--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -68,7 +68,7 @@
       <li> Natural Language Processing</li>
     </ul>
     <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter saat sedang ramai skandal kasus investasi yang dilakukan dan didalangi oleh Jouska. Dari hasil tersebut, dapat dilihat bahwa lini masa menganggap masalah ini sebagai isu negatif.</p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">Preprint Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">GitHub Link</a>
   </div>
 </div>
 
@@ -82,7 +82,7 @@
       <li> Natural Language Processing</li>
     </ul>
     <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter tentang kinerja mengenai Menteri Kesehatan pada Juli 2020. Dari table diatas, dapat dilihat bahwa sentiment mengenai Menteri Terawan berada pada posisi yang positif. </p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">Preprint Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">GitHub Link</a>
   </div>
 </div>
 
@@ -97,7 +97,21 @@
       <li>XGBoost</li>
     </ul>
     <p>Program ini memprediksi gaji seseorang bedasarkan parameter-parameter seperti kelas pekerja, umur, pendidikan, pekerjaan, dll.  Program ini meliputi proses data wrangling, modelling, dan validasi. Model tersebut berhasil menempati posisi 15 dari total 420 orang yang mengikuti kompetisi ini.  </p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Final%20Project.ipynb" target="_blank">Preprint Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Final%20Project.ipynb" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Image Recognition: Rock Paper Scissor </h3>
+    <ul>
+      <li>Convolutional Neural Networks</li>
+    </ul>
+    <p>Program ini adalah program yang dibuat untuk menyelesaikan kursus di Dicoding Indonesia. Program ini memodelkan simbol tangan yang model tersebut dilatih menggunakan 1314 jumlah data latih dan 874 data tes. Data tersebut kemudian diteruskan kedalam suatu sekuensial model yang terdiri atas lapisan-lapisan jaringan syaraf tiruan. Jaringan ini berbentuk operasi matematis yang digunakan untuk mendeteksi tepian. Tingkat akurasi yang dihasilkan untuk model ini berada pada 97,54%  </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
   </div>
 </div>
 
