--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
     <div class="tech">
 
       <h2><center>Other Softwares and Tools</center></h2>
-	  <center><img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Tableau_Logo.png" alt="Matlab" style="width:320px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/SQLite370.svg/573px-SQLite370.svg.png" alt="VB.NET" style="width:120px;height:70px;"></center>
+	  <center><img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Tableau_Logo.png" alt="Matlab" style="width:320px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://github.com/JuliaLang/julia-logo-graphics/raw/master/images/julia-logo-color.png" alt="Julia" style="width:150px;height:90px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/SQLite370.svg/573px-SQLite370.svg.png" alt="VB.NET" style="width:121x;height:70px;"></center>
 	  <p><center>These are tools that I mastered.</center></p>
 
 	</div>
