--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Codes and Tools</h2>
+      <h2>Codes</h2>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/240px-Python-logo-notext.svg.png" alt="Python" style="width:70px;height:70px;">
       <i class="devicon-c-line colored"></i>
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="Matlab" style="width:60px;height:60px;">
