--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -115,6 +115,22 @@
   </div>
 </div>
 
+<div class="user-details">
+  <h1> Computational Physics Portfolio </h1>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/1-cp-decay" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Uranium Decay </h3>
+    <ul>
+      <li>Numerical Methods</li>
+    </ul>
+    <p> Program ini dibuat untuk menghitung waktu peluruhan untuk Uranium 235. Selain itu, program ini menghitung nilai pembulatan mesin serta lebar pias yang tepat untuk simulasi ini.  </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
+  </div>
+</div>
 <!--
 <div class="user-details">
   <h1> Computational Physics Portfolio </h1>
