--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -131,6 +131,20 @@
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
   </div>
 </div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/2-cp-balap" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Classical Mechanics of Velocity </h3>
+    <ul>
+      <li>Numerical Methods</li>
+    </ul>
+    <p> Program ini dibuat untuk menghitung kecepatan dari daya suatu atlit balap jika diketahui nilai daya. Perumusan umum yang kita dapat kemudian didiskritisasi menjadi bentuk yang mudah diselesaikan secara komputasi sehingga didapatkan kecepatan sesuai dengan batasan-batasan yang didefinisikan beserta dengan parameternya. </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
+  </div>
+</div>
 <!--
 <div class="user-details">
   <h1> Computational Physics Portfolio </h1>
