--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -120,7 +120,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-cp-decay" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/1-cp-decay.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Uranium Decay </h3>
