--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -134,7 +134,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/2-cp-balap" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/2-cp-balap.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Classical Mechanics of Velocity </h3>
