--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -128,7 +128,7 @@
       <li>Numerical Methods</li>
     </ul>
     <p> Program ini dibuat untuk menghitung waktu peluruhan untuk Uranium 235. Selain itu, program ini menghitung nilai pembulatan mesin serta lebar pias yang tepat untuk simulasi ini.  </p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/1-Peluruhan" target="_blank">GitHub Link</a>
   </div>
 </div>
 
@@ -142,7 +142,49 @@
       <li>Numerical Methods</li>
     </ul>
     <p> Program ini dibuat untuk menghitung kecepatan dari daya suatu atlit balap jika diketahui nilai daya. Perumusan umum yang kita dapat kemudian didiskritisasi menjadi bentuk yang mudah diselesaikan secara komputasi sehingga didapatkan kecepatan sesuai dengan batasan-batasan yang didefinisikan beserta dengan parameternya. </p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/2-Mekanika%20Klasik%20Mobil%20Balap" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/3-cp-pendulum.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Pendulum Simulation </h3>
+    <ul>
+      <li>Comparative Study of Euler, Euler-Cromer, and Verlet Methods</li>
+    </ul>
+    <p> Program ini dirancang untuk melihat pengaruh beberapa metoda numerik (Euler, Euler-Cromer, dan Verlet) untuk menghitung suatu gerak pendulum dengan memperhatikan tingkat akurasi program. </p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/3-Pendulum%20menggunakan%20Euler%2C%20Euler-Cromer%2C%20dan%20Verlet" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-cp-em.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Electromagnetic Propagation in 1D and 3D Domain </h3>
+    <ul>
+      <li>Numerical Methods</li>
+    </ul>
+    <p> Program ini dirancang untuk mensimulasikan Governing Equation untuk gelembang E dan H (1 Dimensi) dan menghitung Hx, Hy, Dz, dan Ez (3 Dimensi).</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/4-Gelombang%20Elektromagnetik" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-cp-em.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Electromagnetic Propagation in 1D and 3D Domain </h3>
+    <ul>
+      <li>Numerical Methods</li>
+    </ul>
+    <p> Program ini dirancang untuk mensimulasikan Governing Equation untuk gelembang E dan H (1 Dimensi) dan menghitung Hx, Hy, Dz, dan Ez (3 Dimensi).</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/4-Gelombang%20Elektromagnetik" target="_blank">GitHub Link</a>
   </div>
 </div>
 <!--
