--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -176,15 +176,43 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/4-cp-em.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/5-cp-mc.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Electromagnetic Propagation in 1D and 3D Domain </h3>
+    <h3> Monte-Carlo dan Random Walk </h3>
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dirancang untuk mensimulasikan Governing Equation untuk gelembang E dan H (1 Dimensi) dan menghitung Hx, Hy, Dz, dan Ez (3 Dimensi).</p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/4-Gelombang%20Elektromagnetik" target="_blank">GitHub Link</a>
+    <p> Program ini dirancang untuk menyelesaikan berbagai persoalan menggunakan Monte-Carlo dan Random Walk. Salah satu permasalahan yang diselesaikan menggunakan Monte Carlo adalah menghitung nilai Pi. Sementara itu, permasalahan yang diselesaikan menggunakan Random Walk adalah pencarian solusi untuk suatu persamaan.</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/5-Simulasi%20Monte%20Carlo" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/6-cp-lj.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Quantum Mechanics - Lennard Jones Potentials </h3>
+    <ul>
+      <li>Numerical Methods</li>
+    </ul>
+    <p> Program ini dirancang untuk menghitung suatu pergerakan elektron dalam kristal NaCl 1 Dimensi menggunakan bantuan potensial Lennard-Jones menggunakan Matlab.</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/6-Quantum%20Mechanics%20Lennard%20Jones%20Potentials" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/7-cp-dft.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Band-structure Simulation of Si, Gap, GaN, and TiO2 Rutile Using Julia Programming </h3>
+    <ul>
+      <li>Density Functional Theory</li>
+    </ul>
+    <p> Program ini dirancang untuk mengkalkulasikan struktur pita dari berbagai macam material menggunakan pemrograman Julia. Hasil dari program ini kemudian dikomparasikan dengan program serupa yaitu Abinit dan VaSP.</p>
+    <a class="project-link" href="https://digilib.itb.ac.id/index.php/gdl/view/41298" target="_blank">Link</a>
   </div>
 </div>
 <!--
